--- a/index.yaml
+++ b/index.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 entries:
-  dlstreamer:
+  gpu:
   - apiVersion: v2
     created: "2023-10-25T19:02:57.1820605+05:30"
     description: A Helm chart to deploy two benchmark containers on a single
